--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta name="author" content="Jihoon Chung">
     <meta name="keywords" content="Hashed Password Sha3 512">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
-    <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/prettify/r298/prettify.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/prettify/r298/prettify.css">
     <style>
         label    { width: 5em; vertical-align: top; }
         input    { max-width: 42em; }
@@ -60,12 +60,12 @@ There are different kinds of password managers that simplifies users to use diff
 <p id="error" class="alert"></p>
 
 <script>document.addEventListener('DOMContentLoaded', function(event) { if (ie11) doc.qrySel('#ie11Notice').classList.remove('hide'); })</script>
-<script src="http://cdnjs.cloudflare.com/ajax/libs/es6-promise/4.0.5/es6-promise.auto.min.js">/* polyfill es6 promises */</script>
-<script src="http://cdnjs.cloudflare.com/ajax/libs/fetch/2.0.2/fetch.min.js">/* polyfill fetch API */</script>
-<script src="http://cdnjs.cloudflare.com/ajax/libs/prettify/188.0.0/prettify.js">/* r224/r298 don't work! */</script>
-<script src="http://cdnjs.cloudflare.com/ajax/libs/js-cookie/2.1.3/js.cookie.min.js">/* github.com/js-cookie/js-cookie */</script>
-<script src="http://www.movable-type.co.uk/js/mtl.js">/* MTL utils */</script>
-<script src="http://cdn.rawgit.com/chrisveness/crypto/4e93a4d/sha3.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/es6-promise/4.0.5/es6-promise.auto.min.js">/* polyfill es6 promises */</script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/fetch/2.0.2/fetch.min.js">/* polyfill fetch API */</script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/prettify/188.0.0/prettify.js">/* r224/r298 don't work! */</script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/js-cookie/2.1.3/js.cookie.min.js">/* github.com/js-cookie/js-cookie */</script>
+<script src="https://www.movable-type.co.uk/js/mtl.js">/* MTL utils */</script>
+<script src="https://cdn.rawgit.com/chrisveness/crypto/4e93a4d/sha3.js"></script>
 <script>
 
     var wordBank = 'abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ`1234567890-=~!@#$%^&*()_+[]\{}|;';
