--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
-
 <!doctype html>
 <html lang="en">
 <head>
-    <title>Hashed Password</title>
+    <title class="center">Hashed Password</title>
     <meta charset="utf-8">
     <meta name="author" content="Jihoon Chung">
     <meta name="keywords" content="Hashed Password Sha3 512">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.99.0/css/materialize.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/prettify/r298/prettify.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <style>
         label    { width: 5em; vertical-align: top; }
         input    { max-width: 42em; }
@@ -20,52 +21,117 @@
 </head>
 
 <body>
-<header>
-  <h1>Hashed Password</h1>
-  <hr>
-  <h2>SHA-3 512 of Password</h2>
+<header class="center">
+  <a class="page-title teal-text text-darken-2"><h1>Hashed Password</h1></a>
+    <h5 class="center teal-text text-darken-5">SHA-3 512 of Password</h2>
 </header>
 
-<p>
-Using same password through different websites are vunerable. Although most websites verificates password using hash, it is impossible for the users to know if hashing is used, or plain text is saved.
-<br>
-<br>
-There are different kinds of password managers that simplifies users to use different passwords but this is also vunerable since its just putting all the eggs in one basket.<br>
-<br>
-<br>
 
 
- </p>
 
-<form name="f">
-  <fieldset>
-  <ul>
-      <li>
-        <label for="message">Url</label>
-        <input name="url" id="url" class="width-full" value="google.com"></input>
-      </li>
-      <li>
-        <label for="message">Master Password</label>
-        <input name="mp" id="mp" class="width-full"  type="password" value="password"></input>
-      </li>
-    <li>
-      <label for="digest">Hash</label>
-      <input name="digest" id="digest" readonly class="width-full"></input>
-    </li>
-    <li><small><i>Note Hashed password of ‘password’ in 'google.com' should be:
-        <b>lX~|ky!&amp;tkG88</b></i></small></li>
-  </ul>
-  </fieldset>
-</form>
+
+  <div class="container">
+    <div class="row">
+      <div class="col s12">
+          <div class="card">
+            <div class="card-content black-text">
+
+              <form name="col s12">
+                <div class="row">
+                  <div class="input-field col s12">
+                    <i class="material-icons prefix">lock</i>
+                    <label for="url">Url</label>
+                    <input name="url" type = "text" id="url" value="google.com"></input>
+                  </div>
+                </div>
+
+                <div class="row">
+                  <div class="input-field col s12">
+                    <i class="material-icons prefix">lock</i>
+                    <label for="mp">Master Password</label>
+                    <input name="mp" id="mp"  type="password" value="password"></input>
+                  </div>
+                </div>
+
+                <div class="row">
+                  <div class="input-field col s12">
+                    <i class="material-icons prefix">lock</i>
+                    <label for="digest">Hash</label>
+                    <input name="digest" id="digest" type = "text" class="width-full" value=" "></input>
+                  </div>
+                </div>
+
+                <blockquote>
+                  <i>Note Hashed password of ‘password’ in 'google.com' should be:
+                  <b>lX~|ky!&amp;tkG88</b></i>
+                </blockquote>
+              </form>
+            </div>
+            <div class="card-action">
+              <a id="copyButton" class="teal-text text-darken-5">Copy</a>
+            </div>
+
+
+          </div>
+
+          <div class="card teal lighten-2">
+            <div class="card-content ">
+
+                <p class="flow-text">
+                Using same password through different websites are vunerable. Although most websites verificates password using hash, it is impossible for the users to know if hashing is used, or plain text is saved.
+                <br>
+                <br>
+                There are different kinds of password managers that simplifies users to use different passwords but this is also vunerable since its just putting all the eggs in one basket.<br>
+                <br>
+                This website allows the user to have long-randomized password that is different among all the websites
+                using hash function. User only have to memorize one master password. Hashing is done within the brower, where nothing is sent to the internet, making it secure.
+                <br><br>
+                This website appends URL and master password together with '-' in between.
+                SHA-3 512 hash function gives out 128 hexadecimal digits.
+                <br />
+                This website uses 2 digits to get one character, and gets total of 12 characters among
+                <br/><br/>
+
+                <strong>'abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ`1234567890-=~!@#$%^&*()_+[]\{}|;'</strong>
+                <br/><br/>
+
+                If the digit is between 0 to 254, it uses remainer of 85, which is length of wordbank, to get the character from the wordback.
+                if its bigger, it skips that two digit, and use next 2 digits to find character. This makes every character in the wordback to have
+                equal liklyhood of being chosen.
+
+
+                 </p>
+
+
+                 <blockquote>
+                 <i>code has been from here: https://github.com/chrisveness/crypto</i>
+                 </blockquote>
+
+            </div>
+          </div>
+      </div>
+    </div>
+  </div>
+
+
+
+
 <p id="error" class="alert"></p>
 
+      <!--Import jQuery before materialize.js-->
+      <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+      <script type="text/javascript" src="js/materialize.min.js"></script>
 <script>document.addEventListener('DOMContentLoaded', function(event) { if (ie11) doc.qrySel('#ie11Notice').classList.remove('hide'); })</script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/es6-promise/4.0.5/es6-promise.auto.min.js">/* polyfill es6 promises */</script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/fetch/2.0.2/fetch.min.js">/* polyfill fetch API */</script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/prettify/188.0.0/prettify.js">/* r224/r298 don't work! */</script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/js-cookie/2.1.3/js.cookie.min.js">/* github.com/js-cookie/js-cookie */</script>
 <script src="https://cdn.rawgit.com/chrisveness/crypto/4e93a4d/sha3.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.99.0/js/materialize.min.js"></script>
 <script>
+  $(document).ready(function() {
+     Materialize.updateTextFields();
+   });
 
     var wordBank = 'abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ`1234567890-=~!@#$%^&*()_+[]\{}|;';
 
@@ -97,8 +163,64 @@ There are different kinds of password managers that simplifies users to use diff
 
     });
 </script>
+<script>
 
-<p>code has been from here: https://github.com/chrisveness/crypto</p>
+  document.getElementById("copyButton").addEventListener("click", function() {
+    copyToClipboard(document.getElementById("digest"));
+      Materialize.toast('Password has been copied to clipboard', 4000,'rounded') // 4000 is the duration of the toast
+  });
+
+  function copyToClipboard(elem) {
+    // create hidden text element, if it doesn't already exist
+    var targetId = "_hiddenCopyText_";
+    var isInput = elem.tagName === "INPUT" || elem.tagName === "TEXTAREA";
+    var origSelectionStart, origSelectionEnd;
+    if (isInput) {
+        // can just use the original source element for the selection and copy
+        target = elem;
+        origSelectionStart = elem.selectionStart;
+        origSelectionEnd = elem.selectionEnd;
+    } else {
+        // must use a temporary form element for the selection and copy
+        target = document.getElementById(targetId);
+        if (!target) {
+            var target = document.createElement("textarea");
+            target.style.position = "absolute";
+            target.style.left = "-9999px";
+            target.style.top = "0";
+            target.id = targetId;
+            document.body.appendChild(target);
+        }
+        target.textContent = elem.textContent;
+    }
+    // select the content
+    var currentFocus = document.activeElement;
+    target.focus();
+    target.setSelectionRange(0, target.value.length);
+
+    // copy the selection
+    var succeed;
+    try {
+        succeed = document.execCommand("copy");
+    } catch(e) {
+        succeed = false;
+    }
+    // restore original focus
+    if (currentFocus && typeof currentFocus.focus === "function") {
+        currentFocus.focus();
+    }
+
+    if (isInput) {
+        // restore prior selection
+        elem.setSelectionRange(origSelectionStart, origSelectionEnd);
+    } else {
+        // clear temporary content
+        target.textContent = "";
+    }
+    return succeed;
+  }
+
+</script>
 
 </body>
 </html>
