--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                 This website uses 2 digits to get one character, and gets total of 12 characters among
                 <br/><br/>
 
-                <strong>'abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ`1234567890-=~!@#$%^&*()_+[]\{}|;'</strong>
+                <strong>'abcdefghijkl mnopqrstuvwx yzABCDEFG HIJKLMNOPQR STUVWXYZ `1234567890 -=~!@#$%^&*( )_+[]\{ }|;'</strong>
                 <br/><br/>
 
                 If the digit is between 0 to 254, it uses remainer of 85, which is length of wordbank, to get the character from the wordback.
